feat: add class slider

--- a/index.html
+++ b/index.html
@@ -291,11 +291,11 @@
 
     <button class="s-cards__btn btn">
         <!-- <div class="s-cards__btn__text">Показать ещё</div> -->
-        <a href="#!" class="s-cards__btn__svg-wrapper">Показать ещё
+        <span href="#!" class="s-cards__btn__svg-wrapper">Показать ещё
             <svg class="s-cards__btn__svg-wrapper__svg">
                 <use xlink:href="#arrowDown"></use>
             </svg>
-        </a> <!-- svg-wrapper -->
+        </span> <!-- svg-wrapper -->
     </button>
 </section> <!-- s-cards -->
 </div> <!-- container -->
