fix:add burger logic

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!-- aside -->
 <g>
 <div class="block"></div>
-<aside class="aside">
+<aside class="aside" id="aside">
 <a href="!#" class="aside__item">Женщинам
     <svg class="aside__item__svg">
         <use xlink:href="#arrowDown"></use>
@@ -108,7 +108,7 @@
 <header class="header" id="header">
 <div class="container">
 <section class="s-header section">
-    <div class="s-header__burger-wrapper">
+    <div class="s-header__burger-wrapper" id="burger">
         <a href="#!" class="s-header__burger-wrapper__svg-wrapper">
             <svg class="s-header__burger-wrapper__svg-wrapper__svg">
                 <use xlink:href="#burger"></use>
