feat: add button to top style: style button 'show_more'

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
     <a href="#" class="aside__item">Мебель
     <i class="fa-solid fa-arrow-down"></i>
     </a>
-    <div class="overlay" id="overlay"></div>
 </aside>           <!-- Slider -->
 <div class="container">
 <section class="s-slider section" id="sliderSection">
@@ -106,6 +105,7 @@
     </button>
 </section> <!-- s-cards -->
 </div> <!-- container -->
+<div class="arrow_top" id="arrow_top"><i class="fa-solid fa-arrow-up"></i></div>
 </main>
             <!-- Footer -->
 <footer class="footer">
