--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
     <a href="#" class="aside__item">Мебель
     <i class="fa-solid fa-arrow-down"></i>
     </a>
-</aside>           <!-- Slider -->
+</aside>           
+<!-- Slider -->
 <div class="container">
 <section class="s-slider section" id="sliderSection">
     <div class="s-slider__slider" id="slider">
@@ -92,6 +93,9 @@
     </div> <!-- slider -->
 </section> <!-- s-slider -->
 </div> <!-- container -->
+<div class="container">
+    <div class="hit">Хиты продаж</div>
+</div>
 
 <!-- Cards -->
 <div class="container">
@@ -100,7 +104,7 @@
     </div> <!-- item-wrapper -->
 
     <button class="s-cards__btn btn" id="show_more">
-        <p href="#!" class="s-cards__btn-show_more" id="show_more_text">Показать ещё</p> <!-- svg-wrapper -->
+        <span href="#!" class="s-cards__btn-show_more" id="show_more_text">Показать ещё</span> <!-- svg-wrapper -->
          <i class="fa-solid fa-arrow-down"></i>
     </button>
 </section> <!-- s-cards -->
@@ -141,6 +145,22 @@
 </section> <!-- s-footer -->
 </div> <!-- container -->
 </footer>
+        <!-- footer mob -->
+    <div class="footer-adapt">
+        <div class="container">
+            <div class="footer-adapt__wrap">
+                <div class="footer-adapt__wrap__item">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+                <div class="footer-adapt__wrap__item">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+                <div class="footer-adapt__wrap__item">
+                    <i class="fa-solid fa-user"></i>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="./scripts/index.js" type="module"></script>
 </body>
 </html>
