--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             wildberries
         </div> <!-- text -->
     </a> <!-- logo-text-wrapper -->
-    <form class="s-header__form">
-        <button type="submit" href="#!" class="s-header__form__submit">
+    <form class="s-header__form" id="serachForm">
+        <button type="submit" href="#!" class="s-header__form__submit" id="serachBtn">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button> <!-- svg-wrapper -->
-        <input class="s-header__form__search-inp" type="text" placeholder="Я ищу...">
+        <input class="s-header__form__search-inp" id="serachInput" type="text" placeholder="Я ищу...">
     </form>
     <div class="s-header__nav-item-wrapper">
         <div class="s-header__nav-item-wrapper__item">
