refactor: refactoring scss cards section on grid aside adptive footer fix: toCart button

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
             
        </li>
    </ul>
-</aside>           
+</aside>
+<div class="userAuthorization" id="userAuthorization"></div>           
 <!-- Slider -->
 <div class="container">
 <section class="s-slider section" id="sliderSection">
