feat: add Search by Denis refactor: refactoring search by Sergey

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             wildberries
         </div> <!-- text -->
     </a> <!-- logo-text-wrapper -->
-    <form class="s-header__form">
-        <button type="button" href="#" class="s-header__form__search-btn">
+    <form class="s-header__form" id="serachForm">
+        <button type="submit" class="s-header__form__search-btn" id="serachBtn">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button> <!-- svg-wrapper -->
-        <input class="s-header__form__search-inp" type="text" placeholder="Я ищу...">
+        <input class="s-header__form__search-inp" type="text" placeholder="Я ищу..." id="serachInput">
     </form>
     <div class="s-header__nav-item-wrapper">
         <div class="s-header__nav-item-wrapper__item">
