feat: add logic footer_search button fix: emptyCards style fix: burger icon refactor: class WBView

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <header class="header" id="header">
 <div class="container">
 <section class="s-header section">
-    <div class="s-header__burger-wrapper" >
-            <i class="fa-solid fa-bars" id="burger"></i>
+    <div class="s-header__burger-wrapper" id="burger">
+            <i class="fa-solid fa-bars"></i>
     </div> <!-- burger-wrapper -->
     <a href="#" class="s-header__logo-text-wrapper">
         <div class="s-header__logo-text-wrapper__text">
@@ -25,7 +25,7 @@
         <button type="submit" class="s-header__form__search-btn" id="serachBtn">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button> <!-- svg-wrapper -->
-        <input class="s-header__form__search-inp" type="text" placeholder="Я ищу..." id="serachInput">
+        <input class="s-header__form__search-inp" type="text" placeholder="Я ищу..." id="serachInput" name="search_input">
     </form>
     <div class="s-header__nav-item-wrapper">
         <div class="s-header__nav-item-wrapper__item">
