feat: add cartModal

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <!-- Header -->
 <header class="header" id="header">
 <div class="container">
+    <div class="welcome_wrapper" id="welcome_wrapper"></div>
 <section class="s-header section">
     <div class="s-header__burger-wrapper" id="burger">
             <i class="fa-solid fa-bars"></i>
@@ -21,11 +22,11 @@
             wildberries
         </div> <!-- text -->
     </a> <!-- logo-text-wrapper -->
-    <form class="s-header__form" id="serachForm">
-        <button type="submit" class="s-header__form__search-btn" id="serachBtn">
+    <form class="s-header__form" id="searchForm">
+        <button type="submit" class="s-header__form__search-btn" id="searchBtn">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button> <!-- svg-wrapper -->
-        <input class="s-header__form__search-inp" type="text" placeholder="Я ищу..." id="serachInput" name="search_input">
+        <input class="s-header__form__search-inp" type="text" placeholder="Я ищу..." id="searchInput" name="search_input">
     </form>
     <div class="s-header__nav-item-wrapper">
         <div class="s-header__nav-item-wrapper__item">
@@ -45,7 +46,7 @@
 </section> <!-- section-header -->
 </div> <!-- container -->
 </header>           <!-- Main -->
-<main class="main">
+<main class="main" id="main">
   <aside class="aside" id="aside">
    <ul class="aside__content">
         <li class="aside__item">
